# kgas1

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  RECOVERY_ARCHIVE_MANIFEST_2026-04-04.md  kgas_mcp_server.py  kgas_simple_mcp_server.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
config/: default.yaml
docs/: CLAUDE.md  PHASE_C_FUTURE_WORK.md  wiki_manifest.yaml
enforced_planning/: worktree_paths.py
investigations/: 2026-06-25-analyze-endpoint-document-pipeline.md  2026-06-25-t27-relationship-extraction-bottleneck.md  2026-06-26-blocked-gates-decision-brief.md  2026-06-26-documentation-link-quality-pass.md  2026-06-26-final-safe-docs-consolidation.md  2026-06-26-legacy-vertical-slice-test-revival-plan.md  2026-06-26-plan1-closeout-review.md  2026-06-26-pytest-collection-performance.md  2026-06-26-runtime-completion-review.md
scripts/: check_markdown_links.py  neo4j_source_cleanup.py
src/: __init__.py  cli.py  mcp_server.py  ontology_generator.py
thesis_record_wiki/: AGENTS.md  CLAUDE.md  PROGRESS.md
tool_compatability/: ACCURATE_TOOL_INVENTORY.md  COMPLETE_TOOL_FILE_LIST.md  DECISION_DOCUMENT.md  FILES_COLLECTED.md  FOLDER_REVIEW_AND_CLEANUP.md  METHODICAL_IMPLEMENTATION_PLAN.md  PROBLEM_ANALYSIS_CONSOLIDATED.md  PROOF_OF_CONCEPT_PLAN.md  README.md  TOOL_REALITY_CHECK.md  UPDATED_TOOL_INVENTORY_WITH_ORM.md  kgas_digimon_structgpt_alignment.md  methodical_implementation_plan.md  take4_CLAUDE.md  the_real_problem.md  thinking_through_orm.md  tool_disposition_plan.md  tool_refactoring_overview.md  unresolved_issues.md
(+1585 files in other folders)
