[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "digimons"
version = "0.1.0"
description = "Digimon KG-RAG operators and benchmarks"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
